--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta
           name="description"
-          content="Seguimiento de Jugadores"
+          content="Torneos App"
         />
-        <title>Seguimiento De Jugadores</title>
+        <title>Torneos App</title>
     </head>
     <body>
         <div id="root"></div>
